[qt] unwinding exception on macos with playlist recovery mechanism

Thread 0 Crashed:: vlc-qt Dispatch queue: com.apple.main-thread
0   libsystem_kernel.dylib        	       0x18ddaea60 __pthread_kill + 8
1   libsystem_pthread.dylib       	       0x18dde6c20 pthread_kill + 288
2   libsystem_c.dylib             	       0x18dcf3a30 abort + 180
3   libc++abi.dylib               	       0x18dd9dd08 abort_message + 132
4   libc++abi.dylib               	       0x18dd8dfa4 demangling_terminate_handler() + 320
5   libobjc.A.dylib               	       0x18da2c1e0 _objc_terminate() + 160
6   libc++abi.dylib               	       0x18dd9d0cc std::__terminate(void (*)()) + 16
7   libc++abi.dylib               	       0x18dda0348 __cxxabiv1::failed_throw(__cxxabiv1::__cxa_exception*) + 88
8   libc++abi.dylib               	       0x18dda028c __cxa_throw + 308
9   libqt_plugin.dylib            	       0x1079baf50 ModelRecoveryAgent::ModelRecoveryAgent<vlc::playlist::PlaylistController>(QSettings*, QString const&, vlc::playlist::PlaylistController*) + 2400 (model_recovery_agent.hpp:65)
10  libqt_plugin.dylib            	       0x1079ba530 ModelRecoveryAgent::ModelRecoveryAgent<vlc::playlist::PlaylistController>(QSettings*, QString const&, vlc::playlist::PlaylistController*) + 8 (model_recovery_agent.hpp:50) [inlined]
11  libqt_plugin.dylib            	       0x1079ba530 std::__1::__unique_if<ModelRecoveryAgent>::__unique_single std::__1::make_unique[abi:ne180100]<ModelRecoveryAgent, QSettings*&, QString, vlc::playlist::PlaylistController*&>(QSettings*&, QString&&, vlc::playlist::PlaylistController*&) + 28 (unique_ptr.h:597) [inlined]
12  libqt_plugin.dylib            	       0x1079ba530 Thread(void*)::$_0::operator()() const + 52 (qt.cpp:1023) [inlined]
13  libqt_plugin.dylib            	       0x1079ba530 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, Thread(void*)::$_0>::call(Thread(void*)::$_0&, void**) + 52 (qobjectdefs_impl.h:137) [inlined]
14  libqt_plugin.dylib            	       0x1079ba530 void QtPrivate::FunctorCallable<Thread(void*)::$_0>::call<QtPrivate::List<>, void>(Thread(void*)::$_0&, void*, void**) + 52 (qobjectdefs_impl.h:345) [inlined]
15  libqt_plugin.dylib            	       0x1079ba530 QtPrivate::QCallableObject<Thread(void*)::$_0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 164 (qobjectdefs_impl.h:555)
16  QtCore                        	       0x109a9c624 QObject::event(QEvent*) + 300
17  QtGui                         	       0x108eac6c0 QGuiApplication::event(QEvent*) + 504
18  QtWidgets                     	       0x108816a7c QApplication::event(QEvent*) + 384
19  QtWidgets                     	       0x108817f28 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 272
20  QtWidgets                     	       0x108818e5c QApplication::notify(QObject*, QEvent*) + 516
21  QtCore                        	       0x109a684ec QCoreApplication::notifyInternal2(QObject*, QEvent*) + 204
22  QtCore                        	       0x109a69214 QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) + 520
23  libqcocoa.dylib               	       0x10a9dc2d0 QCocoaEventDispatcherPrivate::processPostedEvents() + 192
24  libqcocoa.dylib               	       0x10a9dcf80 QCocoaEventDispatcherPrivate::postedEventsSourceCallback(void*) + 412
25  CoreFoundation                	       0x18dec64d8 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 28
26  CoreFoundation                	       0x18dec646c __CFRunLoopDoSource0 + 176
27  CoreFoundation                	       0x18dec61dc __CFRunLoopDoSources0 + 244
28  CoreFoundation                	       0x18dec4dc8 __CFRunLoopRun + 828
29  CoreFoundation                	       0x18dec4434 CFRunLoopRunSpecific + 608
30  HIToolbox                     	       0x19866819c RunCurrentEventLoopInMode + 292
31  HIToolbox                     	       0x198667e2c ReceiveNextEventCommon + 220
32  HIToolbox                     	       0x198667d30 _BlockUntilNextEventMatchingListInModeWithFilter + 76
33  AppKit                        	       0x191723d68 _DPSNextEvent + 660
34  AppKit                        	       0x191f19808 -[NSApplication(NSEventRouting) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 700
35  AppKit                        	       0x19171709c -[NSApplication run] + 476
36  libqcocoa.dylib               	       0x10a9db3f4 QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 1932
37  QtCore                        	       0x109a6f0c8 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 448
38  QtCore                        	       0x109a68a24 QCoreApplication::exec() + 112
39  libqt_plugin.dylib            	       0x1079b4f00 Thread(void*) + 2532 (qt.cpp:1105) [inlined]
40  libqt_plugin.dylib            	       0x1079b4f00 invocation function for block in OpenInternal(qt_intf_t*) + 2576 (qt.cpp:614)
41  CoreFoundation                	       0x18dec6070 __CFRUNLOOP_IS_CALLING_OUT_TO_A_BLOCK__ + 28
42  CoreFoundation                	       0x18dec5f84 __CFRunLoopDoBlocks + 356
43  CoreFoundation                	       0x18dec5414 __CFRunLoopRun + 2440
44  CoreFoundation                	       0x18dec4434 CFRunLoopRunSpecific + 608
45  CoreFoundation                	       0x18df4245c CFRunLoopRun + 64
46  vlc-osx-static                	       0x10423307c main + 1012 (darwinvlc.m:309)
47  dyld                          	       0x18da5e0e0 0x18da58000 + 24800